# effective-broccoli

./: CMakeLists.txt  README.md  conanfile.txt
configured_files/: CMakeLists.txt  EffectiveBroccoliConfig.hpp.in
doc/: component_diagram.puml
proto/: QueryGrpcService.proto
scripts/: conan_init.sh
src/: CMakeLists.txt  ProtoParser.cc  main.cpp
src/parser/: CMakeLists.txt  ProtoParser.cpp  ProtoParser.h
test/: CMakeLists.txt  broccoli_test.cc
